--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red_rafg">#DF030A</color>
+    <color name="blue_rafg">#021677</color>
+    <color name="Yellow_rafg">#9F8F01</color>
 </resources>
